traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Erreur de compilation :
TraversalByColumn:9: error: not found: value Direction
      if (a==Direction.EST){
             ^