traversal.column.traversalbycolumn.TraversalByColumn.scala.code
override def run() {
  var a=getMondeHauteur()
  var b=getMondeLargeur()
  var x=0
  var cpt=0
  var k=0
  def finale():Boolean={
    var a=getDirection()
    if (estFaceMur()==true){
      if (a==Direction.EST){
        gauche()
        if (estFaceMur==true){return true}
        avance();gauche()
        return false
      } else {
        droite()
        if (estFaceMur==true){return true}
        avance();droite()
        return false
      }
    }
    return false
  }
  while ((getX()!=(a-1) || getY!=(b-1))&&(finale==false)){
  
    for (k<-1 to (b-1)){
      ecritMessage(cpt)
      setPos(x,k)
      cpt+=1
    }
    ecritMessage(cpt)
    x+=1
    setPos(x,0)
    cpt+=1
  }

}